@@ -7,13 +7,12 @@
 include $(top_srcdir)/config/Make-inc.mk
 
 install-data-local:
-	if test -d "$(sysconfdir)/init.d"; then \
-	  $(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
-	  $(INSTALL) -m 755 $(srcdir)/munge.init \
-	    "$(DESTDIR)$(sysconfdir)/init.d/munge"; \
-	fi
-	if test -d "$(sysconfdir)/sysconfig"; then \
-	  $(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/sysconfig"; \
-	  $(INSTALL) -m 755 $(srcdir)/munge.sysconfig \
-	    "$(DESTDIR)$(sysconfdir)/sysconfig/munge"; \
-	fi
+	test -f "$(sysconfdir)/init.d/munge" && f="munge.new" || f="munge"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/init.d"; \
+	$(INSTALL) -m 755 $(srcdir)/munge.init \
+	  "$(DESTDIR)$(sysconfdir)/init.d/$$f"; \
+	test -d "$(sysconfdir)/sysconfig" && d="sysconfig" || d="default"; \
+	test -f "$(sysconfdir)/$$d/munge" && f="munge.new" || f="munge"; \
+	$(INSTALL) -m 755 -d "$(DESTDIR)$(sysconfdir)/$$d"; \
+	$(INSTALL) -m 755 $(srcdir)/munge.sysconfig \
+	  "$(DESTDIR)$(sysconfdir)/$$d/$$f"
