@@ -1,3 +1,8 @@
+2006-05-03  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* munge.spec: Removed used of munge-files-aux list.
+	* src/etc/Makefile.am: Removed tests for init.d & sysconfig dirs.
+
 2006-05-02  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/etc/munge.init: Removed use of "local" keyword for Solaris.
